add bootentry and file
